# climviz

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt  ruff.toml
climviz/: __init__.py  app.py
climviz/components/: div_based.py  dmc_based.py  navbar.py
climviz/helpers/: data_manager.py  layout.py  utils.py
climviz/models/: grey_radiation.py  rrtm.py
climviz/pages/: grey_radiation.py  home.py  rrtm.py
climviz/pages/rrtm/: common.py  exploration.py  rrtm.py  sensitivity_analysis.py
